test/Sema/Inputs/circularity_multifile_error_helper.swift
struct External {
  var member: Something // expected-error {{use of undeclared type 'Something'}}
}

struct OtherExternal {}
